--- a/home/proyecto.html
+++ b/home/proyecto.html
@@ -66,7 +66,7 @@
                     <!-- logo begin -->
                     <h1 id="logo">
                         <a href="../index.html">
-                            <img class="logo" src="images/logoColor.svg" alt="logo-Alrio">
+                            <img class="logo" src="images/logo.png" alt="logo-Alrio">
                         </a>
                     </h1>
                     <!-- logo close -->
@@ -85,7 +85,7 @@
                             <li class=''><a href="oficinas.html">OFICINAS</a>
                             </li>
                             <li><a href="shopping.html">SHOPPING</a></li>
-                            <li><a href="arquitectos.html">ARQUITECTOS</a></li>
+                            <li><a href="campus.html">CAMPUS</a></li>
                             <li><a href="contacto.html">CONTACTO</a></li>
                         </ul>
                     </nav>
@@ -104,6 +104,7 @@
                             <li><a href="#section-videos">VIDEO</a></li>
                             <li><a href="#section-imagenes">IMAGENES</a></li>
                             <li><a href="#section-ubicacion">UBICACION</a></li>
+                            <li><a href="#section-accesos">ACCESOS</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -111,11 +112,12 @@
         </div>
             
     </header>
+    <div class="cm-header"></div>
         <!-- header close -->
     <section id="">
         <div class="ed-container">
             <div class="ed-item wow fadeInUp">
-                <h1 class="h1">LA COMODIDAD DE VIVIR Y TRABAJAR<br>CERCA DE TODO LO QUE AMAS. <br><span id="section-proyecto">AL RIO PROYECTO</span>
+                <h1 class="h1">MÁS VIDA <br><span id="section-proyecto">AL RIO PROYECTO</span>
                 </h1>
             </div>
         </div>
@@ -125,14 +127,14 @@
                     Al Rio es un es un innovador desarrollo urbano, que incluye residencias, un centro comercial de primera categoría, un polo gastronómico, cines, dos torres de oficinas corporativas y espacios para profesionales.
                     El proyecto Al Río se integra con un entorno natural único, le da la cara al río y los nuevos espacios verdes que se han recuperado en su orilla.
                 </p>
-                <figure data-url='1' class='desde-movil'>
+                <figure data-url='1' class='desde-tablet'>
                 </figure>
             </div>
             <div class="ed-item tablet-1-3 justify wow fadeInUp" data-wow-delay=".2s">
                 <p>
                    Al Río es un emprendimiento urbano de usos múltiples que se emplaza sobre 16 hectáreas en la intersección de Avenida del Libertador y General Paz. La ubicación, con sus accesos privilegiados, es sumamente estratégica: al lado de la ciudad pero lejos del caos.  Es un concepto de lugar para vivir, trabajar y entretenerse. 
                 </p>
-                <figure data-url='2' class='desde-movil'>
+                <figure data-url='2' class='desde-tablet'>
                     
                 </figure>
             </div>
@@ -272,6 +274,43 @@
                 </div>
             </div>
         </section>
+         <section id="arquitectos">
+            <div class="ed-container abcenter">
+                <div class="ed-item">
+                    <h2 class="h1 wow fadeInUp">
+                        <span id="section-arquitectos">Arquitectos</span>
+                    </h2>
+                </div>
+            </div>
+        </section>
+        <section class="cm-arquitectos wow fadeInUp">
+            <div class="ed-container">
+                <div class="ed-item especial">
+                    <figure>
+                        <img src="images/arq1.jpg" alt="">
+                    </figure>
+                    <figure>
+                        <img src="images/arq2.jpg" alt="">
+                    </figure>
+                    <figure>
+                        <img src="images/arq3.jpg" alt="">
+                    </figure>
+                    <figure>
+                        <img src="images/arq4.jpg" alt="">
+                    </figure>
+                    <figure>
+                        <img src="images/arq5.jpg" alt="">
+                    </figure>
+                </div>
+                <div class="ed-item abcenter">
+                    <img src="images/logoarq1.jpg" alt="">
+                    <img src="images/logoarq2.jpg" alt="">
+                    <img src="images/logoarq3.jpg" alt="">
+                    <img src="images/logoarq4.jpg" alt="">
+                    <img src="images/logoarq5.jpg" alt="">
+                </div>
+            </div>
+        </section>
         <section class="m-video wow fadeInUp">
             <div class="ed-container abcenter">
                 <div class="ed-item ">
@@ -308,7 +347,62 @@
         <section class="cm galeria">
             <div class="ed-container">
                 <div class="ed-item">
-                    <h1 class="h1 wow fadeInUp">VAS A CAMBIAR TU ESTILO<br>DE VIDA PARA SIEMPRE <br><span id='section-imagenes'>galería de imagenes</span></h1>
+                    <h1 class="h1 wow fadeInUp">LA COMODIDAD DE VIVIR Y TRABAJAR<br>CERCA DE TODO LO QUE AMAS. <br><span id="section-imagenes">galería de imagenes</span>
+                </h1>
+                </div>
+            </div>
+        </section>
+        <section class="cm-portfolio" id="cm-portfolio">   
+            <div class="ed-container full abcenter">
+                <div class="portfolio-modal" id="portfolio-modal">
+                    <span class="icon-cerrar" id="iconCerrar"></span>
+                    <!--
+                    <span class="icon-izquierda"></span>
+                    <span class="icon-derecha"></span>
+                    -->
+                    <figure class="cm-portfolio-modal">
+                        <img src="" alt="">
+                    </figure>
+                </div>
+                <div class="ed-item tablet-25 no-padding">
+                    <figure class="cm-small">
+                        <img src="images/portfolio/img-elproyecto1.jpg" alt="1">
+                    </figure>
+                </div>
+                <div class="ed-item tablet-25 no-padding">
+                    <figure class="cm-small">
+                        <img src="images/portfolio/img-elproyecto2.jpg" alt="2">
+                    </figure>
+                </div>
+                <div class="ed-item tablet-25 no-padding">
+                    <figure class="cm-small">
+                        <img src="images/portfolio/img-elproyecto3.jpg" alt="3">
+                    </figure>
+                </div>
+                <div class="ed-item tablet-25 no-padding">
+                    <figure class="cm-small">
+                        <img src="images/portfolio/img-elproyecto4.jpg" alt="4">
+                    </figure>
+                </div>
+                <div class="ed-item tablet-25 no-padding">
+                    <figure class="cm-small">
+                        <img src="images/portfolio/img-elproyecto6.jpg" alt="5">
+                    </figure>
+                </div>
+                <div class="ed-item tablet-25 no-padding">
+                    <figure class="cm-small">
+                        <img src="images/portfolio/img-elproyecto5.jpg" alt="6">
+                    </figure>
+                </div>
+                <div class="ed-item tablet-25 no-padding">
+                    <figure class="cm-small">
+                        <img src="images/portfolio/img-elproyecto8.jpg" alt="7">
+                    </figure>
+                </div>
+                <div class="ed-item tablet-25 no-padding">
+                    <figure class="cm-small">
+                        <img src="images/portfolio/img-elproyecto7.jpg" alt="8">
+                    </figure>
                 </div>
             </div>
         </section>
@@ -322,26 +416,24 @@
             </div>
         </section>
         <section class="cm ubicacion wow fadeInUp">
-            <div class="ed-container">
+            <div class="ed-container ">
                 <div class="ed-item">
-                    <a href="https://goo.gl/maps/Y9ucRcFAhez" target="_blank"><div class="circle circle-masterplan" target="_blank" data-position="1" data="Ubicanos"> 
+                    <a href="https://goo.gl/maps/Y9ucRcFAhez" target="_blank"><div class="circle circle-masterplan circle-ubicacion" target="_blank" data-position="1" data="Ubicanos"> 
                         <span class="icon-cerrar"></span>
                     </div></a>
-                    <figure>
+                    <figure class="desde-web">
                         <img src="images/map-marker.svg" alt="ubicacionSvg">
                     </figure>
                 </div>
+                <div class="ed-item abcenter google ">
+                    <a href="https://goo.gl/maps/Y9ucRcFAhez"target="_blank" class="btn btn-primary btn-big btn-cm">Ver google map</a>
+                </div>
             </div>
         </section>
-        <div class="ed-container abcenter google">
-            <div class="ed-item">
-                <a href="https://goo.gl/maps/Y9ucRcFAhez"target="_blank" class="btn btn-primary btn-big btn-cm">Ver google map</a>
-            </div>
-        </div>
         <article>
             <div class="ed-container abcenter">
                 <div class="ed-item">
-                    <h2 class="h1 wow fadeInUp">
+                    <h2 class="h1 wow fadeInUp" id="section-accesos">
                         <span>accesos</span>
                     </h2>
                 </div>
@@ -389,7 +481,7 @@
                 </div>
             </div>
         </section>
-        <section class="hasta-tablet"> 
+        <section class="hasta-tablet accesos2"> 
             <div class="ed-container  abcenter">
                 <div class="ed-item">
                     <img src="images/tren.png" alt="">
@@ -420,10 +512,11 @@
                     <img src="images/persona.png" alt="">
                     <h2>titulo</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi pariatur minima enim, iure dolorem autem commodi iusto tenetur in, reiciendis eveniet alias est repellat repellendus quae facilis, soluta maiores id.</p>
+                    <hr>
                 </div>
             </div>
         </section>
-        <section>
+        <section class="rio-coment">
             <div class="ed-container abcenter">
                 <div class="ed-item">
                     <p>Al Rio integra un gran cantidad de distintos accesos por los cuales se puede llegar a su destino. Está situado en un punto estratégico en donde 380.000 autos pasan por día. <br>Es un punto de conexión con el este, oeste y sur de Buenos Aires. Ubicado a 8 Km de Aeroparque y cercano a las autopistas. <br>Dispone de rápidos accesos a centros residenciales, a 5 Km de Belgrano y Palermo, 10 Km de San Isidro y 12 Km del centro de la ciudad y Recoleta.</p>
@@ -454,7 +547,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-4">
-                            <img src="images/logoColor.svg" class="logo-small" alt="logo-Alrio"><br>
+                            <img src="images/logo.png" class="logo-small" alt="logo-Alrio"><br>
                             Al Rio es un mega-emprendimiento ubicado en un punto estratégico, en conexión directa con la naturaleza del Río de la plata en Vicente López.<br>Abarca 16 hectáreas en Av. del Libertador y General Paz y comprende el desarrollo de un mall in and out.
                         </div>
 
@@ -476,7 +569,7 @@
                             <div class="widget widget-address">
                                 <address>
                                     <span><b>Salón de Ventas:</b></span>
-                                    <p>Av. del Libertador 350 Piso 11 - Vicente López</p>
+                                    <p class="no-margin">Av. del Libertador 350 Piso 11 - Vicente López</p>
                                     <span><strong>Tel:</strong>6009-9000</span>
                                     <span><strong>Email:</strong>info@alrio.com.ar</span>
                                     <span>Horario de Atención: De Lun/ Vie 10 a 20 hs.</span>
